--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -14,11 +14,8 @@
   <tbody>
     <% @shifts.each do |shift| %>
       <tr>
-        <td><%= shift.role_id %></td>
-        <td><%= shift.associate_id %></td>
-        <td><%= link_to 'Show', shift %></td>
-        <td><%= link_to 'Edit', edit_shift_path(shift) %></td>
-        <td><%= link_to 'Destroy', shift, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to (Associate.find_by employee_id: shift.employee_id).full_name, '#' %></td>
+        <td><%= Role.find(shift.role_id).name %></td>
       </tr>
     <% end %>
   </tbody>
