--- a/app/views/shifts/_form.html.erb
+++ b/app/views/shifts/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.input :employee_id, label: 'Scan your badge', :autofocus => true %>
   </div>
 
-  <div class="actions">
+ <!--  <div class="actions">
     <%= f.submit %>
-  </div>
+  </div> -->
 <% end %>
