--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Shifts</h1>
+<h1>Shift Assignments</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Role</th>
       <th>Associate</th>
+      <th>Role</th>
       <th colspan="3"></th>
     </tr>
   </thead>
