--- a/app/views/shifts/new.html.erb
+++ b/app/views/shifts/new.html.erb
@@ -1,5 +1,5 @@
 <!-- <h1>New Shift</h1> -->
-
-<%= render 'form', shift: @shift %>
-
+<div class="container center_div">
+  <%= render 'form', shift: @shift %>
+</div>
 <%#= link_to 'Back', shifts_path %>
