--- a/app/views/shifts/new.html.erb
+++ b/app/views/shifts/new.html.erb
@@ -1,4 +1,4 @@
-<!-- <h1>New Shift</h1> -->
+<h1 class="text-center">Scan your badge to see your shift assignment</h1>
 <div class="container center_div">
   <%= render 'form', shift: @shift %>
 </div>
