--- a/app/views/planned_roles/_form.html.erb
+++ b/app/views/planned_roles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(planned_role) do |f| %>
+<%= simple_form_for(planned_role) do |f| %>
   <% if planned_role.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(planned_role.errors.count, "error") %> prohibited this planned_role from being saved:</h2>
@@ -11,14 +11,12 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :associate_id %>
-    <%= f.number_field :associate_id %>
+  <div class="dropdown" >
+    <%= f.input :associate_id, collection: Associate.all, label_method: :full_name,:value_method => :id, label: "Associate" %>
   </div>
 
   <div class="field">
-    <%= f.label :role_id %>
-    <%= f.number_field :role_id %>
+    <%= f.input :role_id, collection: Role.all, label_method: :name,:value_method => :id  %>
   </div>
 
   <div class="actions">
