--- a/app/views/shifts/_form.html.erb
+++ b/app/views/shifts/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.input :employee_id, label: 'Scan your badge', :autofocus => true %>
+    <%= f.input :employee_id, label: false, :autofocus => true %>
   </div>
 
  <!--  <div class="actions">
