--- a/app/views/shifts/show.html.erb
+++ b/app/views/shifts/show.html.erb
@@ -1,16 +1,20 @@
 
-<p id="notice"><%= notice %></p>
-
 <p>
-  <h1>Hi
-    <%= (Associate.find_by employee_id: @shift.employee_id).first_name %> <%= (Associate.find_by employee_id: @shift.employee_id).last_name %>!
-  </h1>
-</p>
+  <% if PlannedRole.exists?(employee_id: @shift.employee_id) %>
+    <h1>Hi
+      <%= (Associate.find_by employee_id: @shift.employee_id).first_name %> <%= (Associate.find_by employee_id: @shift.employee_id).last_name %>!
+    </h1>
 
-<p>
-  <h1>Today you will be a
-    <%= Role.find(@shift.role_id).name %>
-  </h1>
+    <p>
+      <h1>Today you will be a
+        <%= Role.find(@shift.role_id).name %>
+      </h1>
+    </p>
+  <% else %>
+    <h1>
+      You have not been assigned a role yet.  Please speak to your manager.
+    </h1>
+  <% end %>
 </p>
 
 <div class="container center_div">
