--- a/app/views/shifts/new.html.erb
+++ b/app/views/shifts/new.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Show all assignments", shifts_path, class: "btn btn-warning" %>
+<%= link_to "Create Shift Plan", new_shift_plan_path, class: "btn btn-primary" %>
 <h1 class="text-center">Scan your badge to see your shift assignment</h1>
 <div class="container center_div">
   <%= render 'form', shift: @shift %>
