--- a/app/views/shifts/show.html.erb
+++ b/app/views/shifts/show.html.erb
@@ -1,4 +1,6 @@
 
+<%= link_to "Show all assignments", shifts, class: "btn btn-primary" %>
+<%= link_to "Create Shift Plan", new_shift_plan_path, class: "btn btn-primary" %>
 <p>
   <% if PlannedRole.exists?(employee_id: @shift.employee_id) %>
     <h1>Hi
