--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,3 +21,82 @@
     margin: 0 auto;
     width:80% /* value of your choice which suits your alignment */
 }
+
+body{
+    padding-top: 50px;
+}
+
+ul{
+  list-style: none;
+  padding: 0;
+}
+
+.panel-footer {
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 40px;
+  background-color: #f5f5f5;
+  margin-top: 20px;
+}
+
+.underline{
+  border-top: 2px solid #000000;
+  border-bottom: 2px solid #000000;
+}
+
+.page-subheader{
+  text-align: center;
+}
+
+.btn-primary.outline {
+  border: 2px solid #0099cc;
+  color: #0099cc;
+}
+
+#map {
+  width: 100%;
+  height: 400px;
+}
+
+.background-orange {
+  background-color: #de651b;
+  color: #fff;
+}
+
+.background-gray {
+  background-color: #777;
+  color: #fff;
+}
+
+.caption {
+    width:100%;
+    bottom: 0px;
+    position: absolute;
+    background:#000;
+    background: -webkit-linear-gradient(bottom, #000 40%, rgba(0, 0, 0, 0) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    background: -moz-linear-gradient(bottom, #000 40%, rgba(0, 0, 0, 0) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    background: -o-linear-gradient(bottom, #000 40%, rgba(0, 0, 0, 0) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    background: linear-gradient(to top, #000 40%, rgba(0, 0, 0, 0) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+}
+
+.thumbnail {
+    border: 0 none;
+    box-shadow: none;
+    margin:0;
+    padding:0;
+}
+
+.caption h4 {
+    color: #fff;
+    text-transform: uppercase;
+    -webkit-font-smoothing: antialiased;
+}
+
+
+/* Removing the default padding for cells */
+.col-lg-3, .col-md-4,  .col-xs-2 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
