--- a/app/views/planned_roles/index.html.erb
+++ b/app/views/planned_roles/index.html.erb
@@ -2,26 +2,218 @@
 
 <h1>Planned Roles</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Associate</th>
-      <th>Role</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<p id="notice"><%= notice %></p>
 
-  <tbody>
-    <% @planned_roles.each do |planned_role| %>
-      <tr>
-        <td><%= Associate.find(planned_role.associate_id).full_name %></td>
-        <td><%= Role.find(planned_role.role_id).name %></td>
-        <td><%= link_to 'Edit', edit_planned_role_path(planned_role) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="row">
+<!-- Recently Updated cases -->
+  <div class="col-sm-6">
+    <div class="chart-wrapper">
+      <div class="chart-title background-gray">
+        Packers
+      </div>
+      <div class="chart-stage">
+       <table class='table leader-list'>
+         <tr>
+          <th></th>
+          <th>Name</th>
+          <th>Badge No.</th>
+         </tr>
 
-<br>
+         <% PlannedRole.where(role_id: 1).order(updated_at: :desc).each_with_index do |role, i| %>
+           <tr>
+             <td><%= i + 1 %></td>
+             <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), '#' %></td>
+             <td><%= role.employee_id %></td>
+           </tr>
+         <% end %>
+       </table>
+      </div>
+      <div class="chart-notes">
+        These are the planned packers
+      </div>
+    </div>
+  </div>
 
-<%= link_to 'New Planned Role', new_planned_role_path %>
+<!-- Most Followed cases -->
+  <div class="col-sm-6">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="chart-wrapper">
+          <div class="chart-title background-orange">
+            SLAM Operators - code: PSSO or PMSO
+          </div>
+          <div class="chart-stage">
+           <table class='table leader-list'>
+             <tr>
+              <th></th>
+              <th>Name</th>
+              <th>Badge No.</th>
+             </tr>
+
+             <% PlannedRole.where(role_id: 2).order(updated_at: :desc).each_with_index do |role, i| %>
+               <tr>
+                 <td><%= i + 1 %></td>
+                 <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), '#' %></td>
+                 <td><%= role.employee_id %></td>
+               </tr>
+             <% end %>
+           </table>
+          </div>
+          <div class="chart-notes">
+            These are the assigned SLAM Operators
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="chart-wrapper">
+          <div class="chart-title background-orange">
+            SLAM Operators - code: PSSO or PMSO
+          </div>
+          <div class="chart-stage">
+           <table class='table leader-list'>
+             <tr>
+              <th></th>
+              <th>Name</th>
+              <th>Badge No.</th>
+             </tr>
+
+             <% PlannedRole.where(role_id: 2).order(updated_at: :desc).each_with_index do |role, i| %>
+               <tr>
+                 <td><%= i + 1 %></td>
+                 <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), '#' %></td>
+                 <td><%= role.employee_id %></td>
+               </tr>
+             <% end %>
+           </table>
+          </div>
+          <div class="chart-notes">
+            These are the assigned SLAM Operators
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="chart-wrapper">
+          <div class="chart-title background-orange">
+            SLAM Operators - code: PSSO or PMSO
+          </div>
+          <div class="chart-stage">
+           <table class='table leader-list'>
+             <tr>
+              <th></th>
+              <th>Name</th>
+              <th>Badge No.</th>
+             </tr>
+
+             <% PlannedRole.where(role_id: 2).order(updated_at: :desc).each_with_index do |role, i| %>
+               <tr>
+                 <td><%= i + 1 %></td>
+                 <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), '#' %></td>
+                 <td><%= role.employee_id %></td>
+               </tr>
+             <% end %>
+           </table>
+          </div>
+          <div class="chart-notes">
+            These are the assigned SLAM Operators
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="chart-wrapper">
+          <div class="chart-title background-orange">
+            SLAM Operators - code: PSSO or PMSO
+          </div>
+          <div class="chart-stage">
+           <table class='table leader-list'>
+             <tr>
+              <th></th>
+              <th>Name</th>
+              <th>Badge No.</th>
+             </tr>
+
+             <% PlannedRole.where(role_id: 2).order(updated_at: :desc).each_with_index do |role, i| %>
+               <tr>
+                 <td><%= i + 1 %></td>
+                 <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), '#' %></td>
+                 <td><%= role.employee_id %></td>
+               </tr>
+             <% end %>
+           </table>
+          </div>
+          <div class="chart-notes">
+            These are the assigned SLAM Operators
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="chart-wrapper">
+          <div class="chart-title background-orange">
+            SLAM Operators - code: PSSO or PMSO
+          </div>
+          <div class="chart-stage">
+           <table class='table leader-list'>
+             <tr>
+              <th></th>
+              <th>Name</th>
+              <th>Badge No.</th>
+             </tr>
+
+             <% PlannedRole.where(role_id: 2).order(updated_at: :desc).each_with_index do |role, i| %>
+               <tr>
+                 <td><%= i + 1 %></td>
+                 <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), '#' %></td>
+                 <td><%= role.employee_id %></td>
+               </tr>
+             <% end %>
+           </table>
+          </div>
+          <div class="chart-notes">
+            These are the assigned SLAM Operators
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="chart-wrapper">
+          <div class="chart-title background-orange">
+            SLAM Operators - code: PSSO or PMSO
+          </div>
+          <div class="chart-stage">
+           <table class='table leader-list'>
+             <tr>
+              <th></th>
+              <th>Name</th>
+              <th>Badge No.</th>
+             </tr>
+
+             <% PlannedRole.where(role_id: 2).order(updated_at: :desc).each_with_index do |role, i| %>
+               <tr>
+                 <td><%= i + 1 %></td>
+                 <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), '#' %></td>
+                 <td><%= role.employee_id %></td>
+               </tr>
+             <% end %>
+           </table>
+          </div>
+          <div class="chart-notes">
+            These are the assigned SLAM Operators
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+<%= link_to 'Edit', edit_planned_role_path(@planned_role) %> |
+<%= link_to 'Back', planned_roles_path %>
+
