--- a/app/views/shift_plans/show.html.erb
+++ b/app/views/shift_plans/show.html.erb
@@ -1,4 +1,7 @@
-<h1>Planned Roles</h1>
+<h1>
+  Planned Roles
+  <%= link_to "Change the Plan", edit_shift_plan_path(@shift_plan), class: "btn btn-success" %>
+</h1>
 
 <% if @planned_roles %>
 <div class="row">
@@ -40,7 +43,7 @@
 <% end %>
 <!--  -->
 
-<%= link_to 'Edit', edit_shift_plan_path(@shift_plan) %> |
+<%= link_to 'Change the Plan', edit_shift_plan_path(@shift_plan) %> |
 <%= link_to 'Back', shift_plans_path %>
 <% else %>
 <h1>This shit plan needs assignments to be added</h1>
