--- a/app/views/shift_plans/show.html.erb
+++ b/app/views/shift_plans/show.html.erb
@@ -1,50 +1,1 @@
-<h1>
-  Planned Roles
-  <%= link_to "Change the Plan", edit_shift_plan_path(@shift_plan), class: "btn btn-success" %>
-</h1>
-
-<% if @planned_roles %>
-<div class="row">
-<!-- Recently Updated cases -->
-<% Role.all.each do |role| %>
-  <div class="col-sm-6">
-    <div class="chart-wrapper">
-      <div class="chart-title background-gray">
-        <%= role.name %>
-      </div>
-      <div class="chart-stage">
-       <table class='table leader-list'>
-         <tr>
-          <th></th>
-          <th>Name</th>
-          <th>Location</th>
-          <th>Badge No.</th>
-         </tr>
-
-         <% @planned_roles.where(role_id: role.id).order(updated_at: :desc).each_with_index do |assignment, i| %>
-           <tr>
-             <td><%= i + 1 %></td>
-             <td><%= link_to truncate((Associate.find_by employee_id: assignment.employee_id).full_name, length: 14), '#' %></td>
-             <td>
-               <% if assignment.location_id? %>
-                 <%= Location.find(assignment.location_id).name %>
-               <% end %>
-             </td>
-             <td><%= assignment.employee_id %></td>
-           </tr>
-         <% end %>
-       </table>
-      </div>
-      <div class="chart-notes">
-        These are the planned <%= role.name %>s
-      </div>
-    </div>
-  </div>
-<% end %>
-<!--  -->
-
-<%= link_to 'Change the Plan', edit_shift_plan_path(@shift_plan) %> |
-<%= link_to 'Back', shift_plans_path %>
-<% else %>
-<h1>This shit plan needs assignments to be added</h1>
-<% end %>
+<h2>go to <%= link_to 'Planned Roles', planned_roles_path %> instead.</h2>
