--- a/app/views/planned_roles/show.html.erb
+++ b/app/views/planned_roles/show.html.erb
@@ -18,7 +18,7 @@
          <% PlannedRole.where(role_id: 1).order(updated_at: :desc).each_with_index do |role, i| %>
            <tr>
              <td><%= i + 1 %></td>
-             <td><%= link_to truncate(Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
+             <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
              <td><%= role.employee_id %></td>
            </tr>
          <% end %>
@@ -49,7 +49,7 @@
              <% PlannedRole.where(role_id: 2).order(updated_at: :desc).each_with_index do |role, i| %>
                <tr>
                  <td><%= i + 1 %></td>
-                 <td><%= link_to truncate(Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
+                 <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
                  <td><%= role.employee_id %></td>
                </tr>
              <% end %>
@@ -78,7 +78,7 @@
              <% PlannedRole.where(role_id: 2).order(updated_at: :desc).each_with_index do |role, i| %>
                <tr>
                  <td><%= i + 1 %></td>
-                 <td><%= link_to truncate(Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
+                 <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
                  <td><%= role.employee_id %></td>
                </tr>
              <% end %>
@@ -107,7 +107,7 @@
              <% PlannedRole.where(role_id: 2).order(updated_at: :desc).each_with_index do |role, i| %>
                <tr>
                  <td><%= i + 1 %></td>
-                 <td><%= link_to truncate(Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
+                 <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
                  <td><%= role.employee_id %></td>
                </tr>
              <% end %>
@@ -136,7 +136,7 @@
              <% PlannedRole.where(role_id: 2).order(updated_at: :desc).each_with_index do |role, i| %>
                <tr>
                  <td><%= i + 1 %></td>
-                 <td><%= link_to truncate(Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
+                 <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
                  <td><%= role.employee_id %></td>
                </tr>
              <% end %>
@@ -165,7 +165,7 @@
              <% PlannedRole.where(role_id: 2).order(updated_at: :desc).each_with_index do |role, i| %>
                <tr>
                  <td><%= i + 1 %></td>
-                 <td><%= link_to truncate(Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
+                 <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
                  <td><%= role.employee_id %></td>
                </tr>
              <% end %>
@@ -194,7 +194,7 @@
              <% PlannedRole.where(role_id: 2).order(updated_at: :desc).each_with_index do |role, i| %>
                <tr>
                  <td><%= i + 1 %></td>
-                 <td><%= link_to truncate(Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
+                 <td><%= link_to truncate((Associate.find_by employee_id: role.employee_id).full_name, length: 14), associate %></td>
                  <td><%= role.employee_id %></td>
                </tr>
              <% end %>
