--- a/app/views/shift_actuals/show.html.erb
+++ b/app/views/shift_actuals/show.html.erb
@@ -1,13 +1,46 @@
 <h1>
-  Roles for Checked In Associates
+  Checked-In Associates
   <%= link_to "Change the Plan", edit_shift_plan_path(@shift_plan), class: "btn btn-success" %>
 </h1>
 
-<% if @shifts %>
 <div class="row">
-<!-- Recently Updated cases -->
-<% Role.all.each do |role| %>
   <div class="col-sm-6">
+    <div class="chart-wrapper">
+      <div class="chart-title background-orange">
+        Packers
+      </div>
+      <div class="chart-stage">
+       <table class='table leader-list'>
+         <tr>
+          <th></th>
+          <th>Name</th>
+          <th>Location</th>
+          <th>Badge No.</th>
+         </tr>
+
+         <% @shifts.where(role_id: 8).order(updated_at: :desc).each_with_index do |assignment, i| %>
+           <tr>
+             <td><%= i + 1 %></td>
+             <td><%= link_to truncate((Associate.find_by employee_id: assignment.employee_id).full_name, length: 14), '#' %></td>
+             <td>
+               <% if assignment.location_id? %>
+                 <%= Location.find(assignment.location_id).name %>
+               <% end %>
+             </td>
+             <td><%= assignment.employee_id %></td>
+           </tr>
+         <% end %>
+       </table>
+      </div>
+      <div class="chart-notes">
+        These are the planned Packers
+      </div>
+    </div>
+  </div>
+<div class="col-sm-6">
+<!-- Recently Updated cases -->
+<% Role.where(id: [9..21]).each do |role| %>
+  <div class="col-sm-12">
     <div class="chart-wrapper">
       <div class="chart-title background-orange">
         <%= role.name %>
@@ -41,10 +74,7 @@
     </div>
   </div>
 <% end %>
-<!--  -->
+</div>
 
 <%= link_to 'Change the Plan', edit_shift_plan_path(@shift_plan) %> |
 <%= link_to 'Back', shift_plans_path %>
-<% else %>
-<h1>This shift plan needs assignments to be added</h1>
-<% end %>
