--- a/app/views/shift_plans/_form.html.erb
+++ b/app/views/shift_plans/_form.html.erb
@@ -1,5 +1,14 @@
 <%= simple_form_for(@shift_plan) do |f| %>
-  <%= f.error_notification %>
+  <% if @shift_plan.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@shift_plan.errors.count, "error") %> prohibited this shift plan from being saved:</h2>
+      <ul>
+      <% @shift_plan.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 
   <h3>Current Assignments:</h3>
   <div id='planned_roles'>
