Adding very basic header
Includes title but no navigational links for now.

For whatever reason bootstrap code is not working.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,14 @@
   </head>
 
   <body>
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-fixed-top navbar-light bg-faded">
     <div class="container">
-      <%= yield %>
+    <h3>Pack Singles Labor Tracker Tool</h3>
     </div>
+  </nav>
+  <div class="container">
+    <%= yield %>
+  </div>
   </body>
 </html>
