--- a/app/views/shift_actuals/show.html.erb
+++ b/app/views/shift_actuals/show.html.erb
@@ -48,7 +48,7 @@
   <div class="col-sm-12">
     <div class="chart-wrapper">
       <div class="chart-title background-orange">
-        <%= role.name %>
+        <%= role.name %> -- Tracking code: <%= role.tracking_code %>
       </div>
       <div class="chart-stage">
        <table class='table leader-list'>
