adding form for plan sizes
this form is for display only. the data can be submitted, but the model
PlanSizes is not actually functional in the way that it would be in a
working app where the numbers entered would be used to create the
initial labor plan for the next shift.

also some minor cosmetic fixes in this commit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <!-- Fixed navbar -->
   <nav class="navbar navbar-fixed-top navbar-light bg-faded">
     <div class="container">
-    <h3>Pack Singles Labor Tracker Tool</h3>
+    <h3>Pack Singles Labor Planning Tool</h3>
     </div>
   </nav>
   <div class="container">
