--- a/app/views/shift_actuals/show.html.erb
+++ b/app/views/shift_actuals/show.html.erb
@@ -6,6 +6,7 @@
   <%= link_to "Change the Plan", edit_shift_plan_path(@shift_plan), class: "btn btn-success" %>
   <%= link_to "Admin", rails_admin.dashboard_path, class: "btn btn-secondary" %>
   <%= link_to "Back to Home Page", root_path, class: "btn btn-secondary" %>
+  <%= link_to "Labor Track", '#', class: "btn btn-danger" %>
 </p>
 
 <div class="row">
