Adding smalls packers to plan sizes
other minor fixes

--- a/app/views/plan_sizes/_form.html.erb
+++ b/app/views/plan_sizes/_form.html.erb
@@ -2,7 +2,8 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :packer, label: 'Packers' %>
+    <%= f.input :packer, label: 'Medium Packers' %>
+    <%= f.input :smalls_packer, label: 'Smalls Packers' %>
     <%= f.input :slam_operator, label: 'SLAM Operators' %>
     <%= f.input :water_spider, label: 'Water Spiders' %>
     <%= f.input :shortstop, label: 'Shortstops' %>
