--- a/app/views/planned_roles/index.html.erb
+++ b/app/views/planned_roles/index.html.erb
@@ -49,7 +49,7 @@
   <div class="col-sm-12">
     <div class="chart-wrapper">
       <div class="chart-title background-gray">
-        <%= role.name %> Tracking code: <%= role.tracking_code %>
+        <%= role.name %> -- Tracking code: <%= role.tracking_code %>
       </div>
       <div class="chart-stage">
        <table class='table leader-list'>
