--- a/app/views/shift_actuals/show.html.erb
+++ b/app/views/shift_actuals/show.html.erb
@@ -13,7 +13,7 @@
   <div class="col-sm-6">
     <div class="chart-wrapper">
       <div class="chart-title background-orange">
-        Packers
+        Medium Packers
       </div>
       <div class="chart-stage">
        <table class='table leader-list'>
